Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-97265

Qt6 mediarecorder QML has invalid syntax in example code

    XMLWordPrintable

Details

    • 108cda751 (dev), 1cbc24928 (6.4), 644dc49fe (6.5), 8209431ab (tqtc/lts-6.2)
    • DaVinci 71

    Description

      In a section of example code that displays how to make start and stop buttons, there is invalid syntax for a media recorder property. There is no MediaRecorder.RecordingStatus, however there is a RecordingState, which works properly when substituted out. The actual full snippet with errors is as follows:
      CameraButton

      { text: "Record" visible: recorder.status !== MediaRecorder.RecordingStatus onClicked: recorder.record()}

      CameraButton

      { id: stopButton text: "Stop" visible: recorder.status === MediaRecorder.RecordingStatus onClicked: recorder.stop()}

      Attachments

        For Gerrit Dashboard: QTBUG-97265
        # Subject Branch Project Status CR V

        Activity

          People

            andreas.eliasson Andreas Eliasson
            patrickgroh Patrick Groh
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes