Doc: Use correct prop and enum const in code snippet

* There is no MediaRecorder.RecordingStatus constant, so change to
MediaRecorder.RecordingState.
* There's no status prop, so change this to recorderState.

Fixes: QTBUG-97265
Change-Id: Iad40b161f86a0c386f745ce7d293a81718f90c6f
Reviewed-by: Volker Hilsheimer <volker.hilsheimer@qt.io>
(cherry picked from commit 108cda751aab4a753c1bfac73d2941f02abdfa49)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>